# miking

./: .git-blame-ignore-revs  .gitignore  .ocamlformat  KERNEL_README.md  LICENSE.txt  MCoreJupyter.ipynb  Makefile  README.md  Tupdefault.lua  Tupfile  Tupfile.lua  Tuprules.lua  _tags  boot.opam  compile-all.sh  cozo-analysis.md  dune-project  exercises.md  future.md  make  make.bat  make.sh  paper-example.mc  run-all.sh  run-wasm.js  t1.mz  test-accelerate.mk  test-boot-compile-prune-utests.mk  test-boot-compile.mk  test-boot-run.mk  test-boot.mk  test-compile-prune-utests.mk  test-compile-type-checked.mk  test-compile.mk  test-files.mk  test-ipopt.mk  test-js.mk  test-jvm.mk  test-mlang-pipeline.mk  test-par.mk  (+7 more)
.github/workflows/: main.yml
boot/: .#lambda.ml  ast.ml  build.ml  lexer.mll  mb1.ml  mozboot.ml  msg.ml  parser.mly  ustring.ml
doc/: prelude.md
doc/reference/: modelyze-reference.md  ragnar-reference.md
emacs/: mcore-mode.el
exp/grep/: gen.c  readcount.c  readcount1.ml  readcount2.ml  readtest.c  readtest.ml  run
misc/: .gitignore  elide-cat  gen-tup-rules  mcore-comby.json  repo-files  repo-ignored-files  test  test-prs  test-spec.mc  watch  with-tmp-dir
misc/direnv/: README.md  nix.envrc
misc/packaging/: README.md  default.nix  flake.nix  miking-pack  miking-pack-darwin  miking-pack-linux  miking.nix  miking.scm
misc/test-prs/: test-prs
scripts/: default.nix  miking-pack  miking.nix  miking.scm  test-prs
src/: .#lexer.mll  .#parser.mly  Tupdefault  Tupfile  Tuprules.tup  moz.mz
src/boot/: .ocamlformat  ast.ml  boot.ml  boot.opam  boot1.ml  boot2.ml  dune  dune-boot  dune-boot-ext  dune-boot-sundials  dune-head  dune-project  errors.ml  eval.ml  ext.cppo.ml  ext.ml  extast.cppo.ml  extast.ml  extpprint.cppo.ml  extpprint.ml  jbuild  lexer.mll  mexpr.ml  mi.ml  mlang.ml  mseq.ml  msg.ml  parser.mly  patterns.ml  ppl.ml  ppllexer.mll  pplparser.mly  ppprint.ml  pprint.ml  repl.ml  t1.mi  t1.mz  typesys.ml  ustring.ml  ustring.mli  (+2 more)
src/boot/boot/: ast.ml  dune  eval.ml  mexpr.ml  parser.mly  ustring.ml
src/boot/lib/: ast.ml  bootparser.ml  builtin.ml  deadcode.ml  dist.ml  dune  eval.ml  ext.ml  extast.ml  extpprint.ml  exttest.ml  inter.ml  intrinsics.ml  intrinsics.mli  lexer.mll  mexpr.ml  mlang.ml  msg.ml  par.ml  par.par-skel.ml  par.par.ml  parast.par-skel.ml  parast.par.ml  parimpl.ml  parimpl.par.ml  parimpl.par.mli  parpprint.ml  parpprint.par-skel.ml  parpprint.par.ml  parser.mly  parserutils.ml  patterns.ml  pprint.ml  pyast.py.ml  pyffi.py-skel.ml  pyffi.py.ml  pypprint.py-skel.ml  pypprint.py.ml  repl.ml  rope.ml  (+13 more)
src/boot/lib/ext/: ext.ml  extast.ml
src/boot/lib/ext-skel/: extast.ml  extpprint.ml
src/boot/lib/py/: pyffi.ml  pypprint.ml
src/boot/lib/sd/: sd.ml  sdpprint.ml
src/boot/lib/sd-skel/: sd.ml  sdast.ml  sdpprint.ml
src/main/: accelerate.mc  compile.mc  eval.mc  generate.mc  gpu.mc  mi-lite.mc  mi.mc  miking.mi  moz.mz  options-config.mc  options-type.mc  options.mc  parse.mc  parser.mc  run.mc  tune-config.mc  tune-options.mc  tune.mc
src/preboot/: boot.ml  dune  msg.ml  ustring.mli  utils.ml
src/stdlib/: annotate.mc  arg.mc  assoc.mc  avl.mc  bool.mc  digraph.mc  error.mc  iterator.mc  log.mc  map.mc  math.mc  name.mc  regex.mc  set.mc  stdlib.mc  stringid.mc  (+3 more)
stdlib/: annotate.mc  arg.mc  argparser.mc  assoc-seq.mc  assoc.mc  avl.mc  basic-types.mc  bool.js  bool.mc  char.mc  collection-interface.mc  common.mc  csv.mc  dfa.mc  digraph.mc  effect.mc  either.mc  eq-paths.mc  eqset.mc  error.mc  fileutils.mc  float.mc  graph.mc  hashmap.mc  heap.mc  hseq.mc  int.mc  iterator.mc  json.mc  lazy.mc  list.mc  local-search.mc  log.mc  map.mc  math-ext.ext-ocaml.mc  math-ext.mc  math.mc  matrix.mc  maxmatch-tensor.mc  maxmatch.mc  (+29 more)
test/: t1.mi
uct-mz/: debruijn-dup.mzn  debruijn.mzn
(+917 files in other folders)
