(ocamllex lexer)
(ocamlyacc parser)

(library
 (name boot)
 (public_name boot)
 (libraries
   batteries
   str
   linenoise

   (select pyffi.ml from
     (pyml -> py/pyffi.ml)
     (-> py-skel/pyffi.ml))
   (select pyast.ml from
     (pyml -> py/pyast.ml)
     (-> py-skel/pyast.ml))
   (select pypprint.ml from
     (pyml -> py/pypprint.ml)
     (-> py-skel/pypprint.ml))

   (select ext.ml from
     (sundialsml -> ext/ext.ml)
     (-> ext-skel/ext.ml))
   (select extast.ml from
     (sundialsml -> ext/extast.ml)
     (-> ext-skel/extast.ml))
   (select extpprint.ml from
     (sundialsml -> ext/extpprint.ml)
     (-> ext-skel/extpprint.ml))
))
