(ocamllex lexer)

(ocamlyacc parser)

(library
 (name boot)
 (public_name boot)
 (libraries
  batteries
  str
  linenoise
  ;; Optional dependencies are used if the relevant libraries are available.
  ;; Note that this will change the result of compiling `mi` depending on
  ;; which packages are available in the environment.
  (select
   pyffi.ml
   from
   (pyml -> pyffi.py.ml)
   (-> pyffi.py-skel.ml))
  (select
   pyast.ml
   from
   (pyml -> pyast.py.ml)
   (-> pyast.py-skel.ml))
  (select
   pypprint.ml
   from
   (pyml -> pypprint.py.ml)
   (-> pypprint.py-skel.ml))
  (select
   sd.ml
   from
   (sundialsml -> sd.sd.ml)
   (-> sd.sd-skel.ml))
  (select
   sdast.ml
   from
   (sundialsml -> sdast.sd.ml)
   (-> sdast.sd-skel.ml))
  (select
   sdpprint.ml
   from
   (sundialsml -> sdpprint.sd.ml)
   (-> sdpprint.sd-skel.ml))))
