(ocamllex lexer)

(ocamlyacc parser)

(library
 (name boot)
 (public_name boot)
 (libraries
  batteries
  str
  linenoise
  ;; Optional dependencies are used if the relevant libraries are available.
  ;; Note that this will change the result of compiling `mi` depending on
  ;; which packages are available in the environment.
  (select
   par.ml
   from
   (domainslib -> par.par.ml)
   (-> par.par-skel.ml))
  (select
   parast.ml
   from
   (domainslib -> parast.par.ml)
   (-> parast.par-skel.ml))
  (select
   parimpl.mli
   from
   (domainslib -> parimpl.par.mli)
   (-> parimpl.par-skel.mli))
  (select
   parimpl.ml
   from
   (domainslib -> parimpl.par.ml)
   (-> parimpl.par-skel.ml))
  (select
   parpprint.ml
   from
   (domainslib -> parpprint.par.ml)
   (-> parpprint.par-skel.ml))
  (select
   pyffi.ml
   from
   (pyml -> pyffi.py.ml)
   (-> pyffi.py-skel.ml))
  (select
   pyast.ml
   from
   (pyml -> pyast.py.ml)
   (-> pyast.py-skel.ml))
  (select
   pypprint.ml
   from
   (pyml -> pypprint.py.ml)
   (-> pypprint.py-skel.ml))
  (select
   sundials_wrapper.ml
   from
   (sundialsml -> sundials_wrapper.sd.ml)
   (-> sundials_wrapper.sd-skel.ml))))
